static html for Homepage is integrated.

--- a/src/app/front/front-main.component.html
+++ b/src/app/front/front-main.component.html
@@ -1,4 +1,7 @@
-<h1>Front Main Component...</h1>
+<rp-front-header></rp-front-header>
+<router-outlet></router-outlet>
+<rp-front-footer></rp-front-footer>
+<!--<h1>Front Main Component...</h1>
 <div>
   <button (click)="onUserModuleClick()">
     User Module
@@ -8,4 +11,5 @@
   <button (click)="onAdminModuleClick()">
     Admin Module
   </button>
-</div>
+</div>-->
+
