--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -40,7 +40,7 @@
             <ul>
               <li routerLinkActive="active" routerLink="" [routerLinkActiveOptions]="{exact: true}"><a>Home<span
                 class="sr-only">(current)</span></a></li>
-              <li><a (click)="gotoforom()">Forums</a></li>
+              <li><a>Forums</a></li>
               <li><a>Products</a></li>
               <li><a>Articles</a></li>
               <li><a>Marketplace</a></li>
