--- a/src/app/user/user-main.component.html
+++ b/src/app/user/user-main.component.html
@@ -1,1 +1,3 @@
-<h1>User Main Component...</h1>
+<rp-user-header></rp-user-header>
+<router-outlet></router-outlet>
+<rp-user-footer></rp-user-footer>
