--- a/src/app/front/front-main.component.html
+++ b/src/app/front/front-main.component.html
@@ -1,7 +1,7 @@
 <rp-front-header></rp-front-header>
 <router-outlet></router-outlet>
 <rp-front-footer></rp-front-footer>
-<!--<h1>Front Main Component...</h1>
+<h1>Front Main Component...</h1>
 <div>
   <button (click)="onUserModuleClick()">
     User Module
@@ -11,5 +11,5 @@
   <button (click)="onAdminModuleClick()">
     Admin Module
   </button>
-</div>-->
+</div>
 
