cohort component added service data binding - WIP

--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -58,7 +58,7 @@
                 </a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a>
+                <a routerLink="cohort">
                   <div class="icnWrapperD">
                     <img src="../../../../assets../../../../assets//images/dashboard_icn3.png" alt=""
                          class="img-responsive"/>
